# AudioDev

./: .gitignore  README.md  WriteTestFiles.py
.claude/: settings.local.json
CorePlot_2.3/iOS/CorePlot.framework/: CorePlot  Info.plist
DaisyExamples/: .project
DaisyExamples/libDaisy/core/: Makefile
DaisyExamples/pod/Looper/: .cproject  .project
DaisyExamples/pod/MultiEffect/: .cproject  .project
DaisyExamples/pod/SimpleOscillator/: .cproject  .project
DaisyExamples/pod/StepSequencer/: .cproject  .project
DaisyExamples/pod/SynthVoice/: .cproject  .project
Embedded DSP DevSystem/: CLAUDE.md  Development Journal.md  Graph Preparation Design.md  Module Spec.md  Project Concept.md  Python Coding Standards.md  core.py  test_core.py
Embedded DSP DevSystem/.claude/: settings.local.json
Embedded DSP DevSystem/diagrams/: graphviz_test.dot
Embedded DSP DevSystem/visual_designer_poc/: README.md  dsp_visual_editor.py
GenericDSP/: Untitled.code-workspace
GenericDSP/AVAudioEngine Wire iOS/AVAudioEngine Wire iOS/: AppDelegate.swift  AudioUnitBase.h  AudioUnitBase.mm  Info.plist  ViewController.swift
GenericDSP/AVAudioEngine Wire iOS/AVAudioEngine Wire iOS.xcodeproj/: project.pbxproj
GenericDSP/Common/AudioUnit/: AudioUnitBase.h  AudioUnitBase.mm  BufferedAudioBus.hpp  GainDsp.hpp
GenericDSP/Common/DSP/: CoefGen.cpp  CoefGen.hpp  MiscDsp.cpp
GenericDSP/Common/GenericDSP/: GenericDsp.cpp  (+7 more)
GenericDSP/CoreDspTest/: CoreDspTest.code-workspace
GenericDSP/Temp AUV3/: bridging_header.h
GenericDsp Docs/: Dual Tremolo.eps  Dual Tremolo.graffle  Generic DSP system thoughts.docx  GenericDSP drawings.graffle  GenericDSP heirarchy.graffle  Graph Processing Rules.docx  iOS Audio State Machine.graffle
GenericDsp Python/Common/: GenericDsp.hpp
GenericDsp Python/Test/: CMakeLists.txt  CodeWriteTest.py  Wrapper.cpp
Max Experiments/: README.md
Max Experiments/.claude/: CLAUDE.md  settings.local.json
Max Experiments/andy.gain_project/: BUILD_STATUS.md  README.md  TestWithOsc.maxpat
Max Experiments/archive/: SESSION_ARCHIVE_2025-12.md
Max Experiments/docs/: MAX_PROCESSING_MODELS.md
Max Experiments/documentation/: BUILD_SYSTEM.md  CODING_STYLE.md  DISTRIBUTED_ROUTING_EXAMPLE.md  QUICK_REFERENCE.md
Max Experiments/examples/: ATTRIBUTE_SETTERS_EXAMPLE.md
Max Experiments/patches/: Chorus.maxpat  Chorus_Faust~.maxpat  Chorus~.maxpat  Simple Osc.maxpat  Uses Chorus.maxpat  split.maxpat  wire.maxpat
Max Experiments/templates/: DSP_EXTERNAL_TEMPLATE.md
Misc/: DspJson.cpp  DspJson.hpp
Old GenericDsp Approach/GenericDSP/: README.md
Old GenericDsp Approach/GenericDSP/Common/SciPy/BlockTest/: CMakeLists.txt
Old GenericDsp Approach/GenericDSP/Common/SciPy/BlockTest/xcode/: CMakeCache.txt  cmake_install.cmake
Old GenericDsp Approach/GenericDSP/Common/SciPy/BlockTest/xcode/CMakeScripts/: ReRunCMake.make
Old GenericDsp Approach/GenericDSP/Common/SciPy/BlockTest/xcode/block_test.build/Debug/ZERO_CHECK.build/: Script-5A139E213AE942DA905BC756.sh
Old GenericDsp Approach/GenericDSP/Common/SciPy/BlockTest/xcode/block_test.build/Debug/block_test.build/: dgph
Old GenericDsp Approach/GenericDSP/Common/SciPy/BlockTest/xcode/block_test.build/Debug/block_test.build/Objects-normal/x86_64/: wrapper.d
Old GenericDsp Approach/GenericDSP/Common/SciPy/BlockTest/xcode/block_test.xcodeproj/: project.pbxproj
Old GenericDsp Approach/GenericDSP/Common/SciPy/BlockTest/xcode/block_test.xcodeproj/project.xcworkspace/xcuserdata/andy.xcuserdatad/: UserInterfaceState.xcuserstate
Old GenericDsp Approach/GenericDsp Docs/: Generic DSP system thoughts.docx  Generic DSP system thoughts.pages
Pickup Analyzer/: button_Test.py  flat_response_sequence.py  pyqt_test.py
PitchShifter/: Pitch Shifter concept.md
PitchShifter/.claude/: CLAUDE.md
SimpleEQ/Audio/: AudioPath.swift  EqAU.h  EqAU.mm  EqDsp.hpp  MiscDsp.cpp  MiscDsp.hpp  SwiftDsp.swift
SimpleEQ/SimpleEQ/: AppDelegate.swift  AudioPath.swift  ChannelStrip.swift  EqVC.storyboard  EqViewContainer.swift  EqViewController.swift  Freq.storyboard  FreqGraphVc.swift  Info.plist  LevelsViewController.swift  PatchesVc.swift  SimpleEQ-Bridging-Header.h  ViewController.swift
SimpleEQ/SimpleEQ.xcodeproj/: project.pbxproj
SimpleEQ/SimpleEQTests/: SimpleEQTests.swift
SimpleEQ/SimpleEQUITests/: SimpleEQUITests.swift
SimpleEQ/UiCommon/: SimpleEQ-Bridging-Header.h
Test_json/Test_json/: main.cpp
Test_json/Test_json.xcodeproj/: project.pbxproj
UI/: FreqGraph.swift  Main.storyboard  ParamCombo.swift  ResponseGraph.h  ResponseGraph.m
UiCommon/: KButton.swift  LabeledSwitch.swift  Meters.swift  MiscUi.swift  ParamCombo.swift  VerticalSlider.swift
audio-graph-python/: .gitignore  CHANGELOG.md  QUICKSTART.md  README.md  cascade.graph  example_cascade.py  example_from_spec.py  requirements.txt  setup.sh
audio-graph-python/bindings/: audio_support.h  pybind_example_processor.cpp  pybind_split_chorus.cpp
audio-graph-python/cpp_modules/: example_processor.cpp  example_processor.h  pybind_example_processor.cpp
audio-graph-python/docs/: DESIGN_DECISIONS.md  SESSION_NOTES_2026-01-10.md
audio-graph-python/examples/: cascade.graph  example_cascade.py  example_from_spec.py  test_dual_tap_delay.py  test_split_chorus.py
audio-graph-python/faust_modules/: gain.dsp
audio-graph-python/python/: __init__.py  graph.py  processors.py
audio-graph-python/tests/: test_capture.py  test_example.py  test_graph_spec.py  test_processors.py
dsp_library/: README.md
dsp_library/faust/: dual_tap_delay.dsp
faust-python-interop/: .gitignore  README.md  debug_dawdreamer.py  example_dawdreamer.py  process_split_gain.py  requirements.txt
faust-python-interop/.claude/: CLAUDE.md
faust-python-interop/faust/: simple_gain.dsp  split_gain.dsp
faust-python-interop/python/: __init__.py
faust-python-interop/tests/: test_example.py
max_externals/: README.md
max_externals/dual_tap_delay_tilde/: CMakeLists.txt  README.md  dual_tap_delay_tilde.cpp  faust_minimal.h
max_externals/split_chorus_tilde/: CMakeLists.txt  README.md  split_chorus_tilde.cpp
(+1011 files in other folders)
