cmake_minimum_required(VERSION 2.8.12)
project(GenericDspTest)

set(COMMON ${PROJECT_SOURCE_DIR}/../Common)
set(CMAKE_BUILD_TYPE Debug)
find_package(pybind11 CONFIG REQUIRED)
pybind11_add_module(${PROJECT_NAME} Wrapper.cpp)
target_include_directories(${PROJECT_NAME} PUBLIC ${COMMON})
target_link_libraries(${PROJECT_NAME} PRIVATE ${ACCEL})
install(TARGETS GenericDspTest LIBRARY DESTINATION ${PROJECT_SOURCE_DIR})