cmake_minimum_required(VERSION 2.8.12)
project(block_test)

set(COMMON ${PROJECT_SOURCE_DIR}/../..)
set(CMAKE_BUILD_TYPE Debug)
find_package(pybind11 CONFIG REQUIRED)
find_library(ACCEL Accelerate)
pybind11_add_module(${PROJECT_NAME} wrapper.cpp)
target_include_directories(${PROJECT_NAME} PUBLIC ${COMMON}/DSP ${COMMON}/GenericDSP)
target_link_libraries(${PROJECT_NAME} PRIVATE ${ACCEL})
